# Vertex-Cover-Optimization

./: README.md
A1/: a1ece650.py  user.yml
A2/: CMakeLists.txt  a2ece650.cpp  user.yml
A3/: CMakeLists.txt  a1ece650.py  a2ece650.cpp  a3ece650.cpp  rgen.cpp  user.yml
A4/: CMakeLists.txt  a4ece650.cpp  example.cpp  user.yml
Project/: CMakeLists.txt  analysis.cpp  gen15Graphs.sh  graphGen.sh  projectece650.cpp  thread_prototype.cpp  user.yml
Project/GeneratedGraphs/: 10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  25.txt  30.txt  35.txt  40.txt  45.txt  5.txt  50.txt  6.txt  7.txt  8.txt  9.txt  alternate15.txt
Project/plot/: #cover_timings.dat#  approx.txt  approx_ratio.gp  log_plot.gp  plot_approx_timings.gp  plot_cnfsat_timings.gp  plot_cover_timings.gp
